edited packages