@@ -1,8 +1,9 @@
-package com.bot.sup.service.callbackquery.impl.activity;
+package com.bot.sup.service.callbackquery.impl.activity.type;
 
 import com.bot.sup.common.enums.CallbackEnum;
 import com.bot.sup.common.properties.message.ActivityMessageProperties;
 import com.bot.sup.common.properties.message.MainMessageProperties;
+import com.bot.sup.repository.ActivityTypeRepository;
 import com.bot.sup.service.callbackquery.Callback;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -13,56 +14,49 @@ import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMa
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
-import static com.bot.sup.common.enums.CallbackEnum.SUP_ACTIVITY_TYPE;
+import static com.bot.sup.common.enums.CallbackEnum.DELETE_ACTIVITY_TYPE;
 
 @Service
 @RequiredArgsConstructor
-public class CallbackActivityTypeImpl implements Callback {
+public class CallbackDeleteActivityTypeImpl implements Callback {
     private final MainMessageProperties mainMessageProperties;
     private final ActivityMessageProperties activityMessageProperties;
+    private final ActivityTypeRepository activityTypeRepository;
 
-    private static final Set<CallbackEnum> ACTIVITIES = Set.of(SUP_ACTIVITY_TYPE);
+    public static final Set<CallbackEnum> ACTIVITIES = Set.of(DELETE_ACTIVITY_TYPE);
 
     @Override
     public BotApiMethod<?> getCallbackQuery(CallbackQuery callbackQuery) throws TelegramApiException {
         Long chatId = callbackQuery.getMessage().getChatId();
+        String activityId = callbackQuery.getData().split("/")[1];
+        deleteActivity(Long.parseLong(activityId));
 
-        return EditMessageText.builder()
-                .messageId(callbackQuery.getMessage().getMessageId())
+        return EditMessageText.builder().messageId(callbackQuery.getMessage().getMessageId())
+                .text(activityMessageProperties.getDeleteActivity())
                 .chatId(chatId)
-                .text("Тип активности")
-                .replyMarkup(setUpKeyboard())
+                .replyMarkup(createKeyboardForDeleteActivity())
                 .build();
     }
 
-    private InlineKeyboardMarkup setUpKeyboard(){
+    private InlineKeyboardMarkup createKeyboardForDeleteActivity() {
         List<List<InlineKeyboardButton>> buttons = new ArrayList<>();
-
-        buttons.add(List.of(
-                InlineKeyboardButton.builder()
-                        .text("Список типов")
-                        .callbackData("LIST_ACTIVITY_TYPE")
-                        .build()));
-        buttons.add(List.of(
-                InlineKeyboardButton.builder()
-                        .text("Добавить тип")
-                        .callbackData("ADD_ACTIVITY_TYPE")
-                        .build()));
-        buttons.add(List.of(
+        buttons.add(Collections.singletonList(
                 InlineKeyboardButton.builder()
                         .text(mainMessageProperties.getBack())
-                        .callbackData("SUP_ACTIVITIES")
+                        .callbackData("SUP_ACTIVITY_TYPE")
                         .build()));
 
         return InlineKeyboardMarkup.builder()
                 .keyboard(buttons)
                 .build();
     }
+
+    private void deleteActivity(Long chatId) {
+        activityTypeRepository.deleteById(chatId);
+    }
+
 
     @Override
     public Collection<CallbackEnum> getSupportedActivities() {
